--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     },
     "dependencies": {
         "@log4js-node/log4js-api": "^1.0.2",
+        "axios": "^1.6.2",
         "faye-websocket": "",
         "restler": "^3.4.0",
         "restler-base": "^3.4.6",
+        "winston": "^3.11.0",
         "xml2js": "^0.4.23",
         "xmldoc": "^1.1.2"
     },
