--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "isy-nodejs",
-    "description": "Javascript wrapper for ISY interface including websockets for change notifications. Fork of isy-js by Rod Toll. Designed to be used in a node.js application.",
+    "description": "Node.js wrapper for ISY interface including websockets for change notifications. Fork of isy-js by Rod Toll. Designed to be used in a node.js application.",
     "license": "MIT",
     "version": "0.5.0-beta.55",
     "author": {
-        "name": "Rod Toll & Pradeep Mouli",
+        "name": "Pradeep Mouli",
         "email": "rod_toll@hotmail.com"
     },
     "scripts": {
@@ -24,19 +24,17 @@
         "@types/xml2js": "^0.4.5",
         "@types/xmldoc": "^1.1.4",
         "babel-preset-env": "^1.7.0",
-        "fake-isy-994i": "",
-        "mocha": "",
-        "typescript": "^3.9.3"
+        "mocha": ""
     },
     "dependencies": {
         "@log4js-node/log4js-api": "^1.0.2",
-        "axios": "^1.6.2",
         "faye-websocket": "",
         "restler": "^3.4.0",
         "restler-base": "^3.4.6",
-        "winston": "^3.11.0",
         "xml2js": "^0.4.23",
-        "xmldoc": "^1.1.2"
+        "xmldoc": "^1.1.2",
+        "winston":"^3.11.0",
+        "axios":"^1.4.0"
     },
     "bugs": {
         "url": "https://github.com/pradeepmouli/isy-js/issues"
