--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
         ],
         //"allowJs": true,
         "outDir": "lib",
+        "sourceMap": true,
+        
         "declaration": true,
         "declarationDir": "lib",
         "resolveJsonModule": true
