--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,25 +3,33 @@
     "compilerOptions": {
         "target": "ES2022",
         "module": "NodeNext",
-        "moduleResolution": "NodeNext",
-        "rootDir": "src",
-        "outDir": "dist",
+
+        "rootDir": "./src",
+        "outDir": "./dist",
         "declaration": true,
-        "declarationDir": "dist/types",
+        "declarationDir": "./dist/types",
         "resolveJsonModule": true,
         "allowSyntheticDefaultImports": true,
-        "declarationMap": true,
-        "sourceMap": true,
-        "incremental": true,
+        "allowJs": false,
+        "skipLibCheck": true,
         "noImplicitOverride": true,
         "noImplicitThis": true
     },
-    "watchOptions": {
-        "excludeDirectories": ["**/node_modules", "_build", "temp/*"]
-      },
+
+      "include": ["src/**/*", "test/**/*", "types/**/*", "scripts/**/*", "bin/**/*", "index.ts", "index.js", "index.d.ts"],
     "exclude": [
-        "./dist/*",
-        "**/node_modules",
-        "./test/*"
+        "node_modules/@project-chip/*",
+        "node_modules",
+        "dist",
+        "coverage",
+        "temp",
+        "scripts",
+        "test",
+        "bin",
+        "types",
+        "index.ts",
+        "index.js",
+        "index.d.ts"
+
     ]
 }
