--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     },
     "scripts": {
         "test": "mocha",
-        "prepublishOnly": "tsc"
+        "prepublishOnly": "npm run build",
+        "linter": "eslint --ignore-path .gitignore .",
+        "build": "rimraf ./dist/* && tsc"
     },
     "keywords": [
         "isy",
@@ -21,25 +23,24 @@
         "test": "test",
         "lib": "dist"
     },
-
     "main": "./dist/ISY.js",
     "devDependencies": {
         "@types/node": "18.18.2",
         "@types/xml2js": "",
         "@types/xmldoc": "",
-        "mocha": ""
+        "mocha": "",
+        "rimraf": "^5.0.7",
+        "typescript": "^5.5.2"
     },
     "dependencies": {
         "@log4js-node/log4js-api": "^1.0.2",
-        "@project-chip/matter.js": "^0.9.1",
-        "axios": "^1.4.0",
-        "faye-websocket": "^0.11.3",
+        "@project-chip/matter.js": "^0.9.2",
+        "axios": "^1.7.2",
+        "faye-websocket": "^0.11.4",
         "mocha": "^7.2.0",
         "p-queue": "^6.6.1",
-        "restler": "^3.4.0",
-        "restler-base": "^3.4.6",
-        "winston": "^3.11.0",
-        "xml2js": "0.6.2",
+        "winston": "^3.13.0",
+        "xml2js": "^0.6.2",
         "xmldoc": ""
     },
     "bugs": {
