--- a/package.json
+++ b/package.json
@@ -47,10 +47,9 @@
         "@types/node": "^18.18.2",
         "@types/xml2js": "",
         "@types/xmldoc": "",
-        "@types/@project-chip/matter.js": "^0.9.3",
         "mocha": "",
         "rimraf": "^5.0.7",
-        "typescript": "^5.5.2"
+        "typescript": "^5.5.3"
     },
     "dependencies": {
         "@log4js-node/log4js-api": "^1.0.2",
@@ -60,8 +59,7 @@
         "mocha": "^7.2.0",
         "p-queue": "^6.6.1",
         "winston": "^3.13.0",
-        "xml2js": "^0.6.2",
-        "xmldoc": ""
+        "xml2js": "^0.6.2"
     },
     "bugs": {
         "url": "https://github.com/pradeepmouli/isy-js/issues"
