--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -18,8 +18,17 @@
             "@project-chip/matter.js": [
                 "./node_modules/@project-chip/matter.js/dist/cjs/export.d.ts"
             ],
+            "@project-chip/matter-node.js/environment": [
+                "./node_modules/@project-chip/matter-node.js/dist/cjs/environment/export.d.ts"
+            ],
             "@project-chip/matter-node.js": [
-                "./node_modules/@project-chip/matter-node.js/dist/cjs"
+                "./node_modules/@project-chip/matter-node.js/dist/cjs/export.d.ts"
+            ],
+            "@project-chip/matter-node.js/*": [
+                "./node_modules/@project-chip/matter-node.js/dist/cjs/export.d.ts"
+            ],
+            "@project-chip/matter-node.js/storage": [
+                "./node_modules/@project-chip/matter-node.js/dist/cjs/storage/export.d.ts"
             ]
         }
     }
