--- a/packages/isy-nodejs/package.json
+++ b/packages/isy-nodejs/package.json
@@ -2,7 +2,7 @@
     "name": "isy-nodejs",
     "description": "Node.js wrapper for ISY interface including websockets for change notifications. Fork of isy-js by Rod Toll. Designed to be used in a node.js application.",
     "license": "MIT",
-    "version": "0.6.0-beta",
+    "version": "1.0.0-alpha.2.0",
     "author": {
         "name": "Pradeep Mouli"
     },
