--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
-new/elkdevice.js
-new/LICENSE
-new/README.md
-new/isy.js
-new/isy-js.iml
-new/isydevice.js
-new/isydevicetypes.json
-new/isyscene.js
-new/isyvariable.js
-new/package.json
-new/scratch.js
-new/test/testsuite.js
+new/*
 .DS_Store
 node_modules/
 ISY*Dump.json
@@ -20,4 +9,5 @@ ISYNodes.xml
 .vscode
 CLI/resources/*
 **/resources_old/*
-packages/isy-nodejs/dist/tsconfig.esm.tsbuildinfo
+**/*.tsbuildinfo
+*.log
