--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "./apps/*"
   ],
   "scripts": {
-    "mocha": "echo \"Error: no test specified\" && exit 1"
+    "mocha": "echo \"Error: no test specified\" && exit 1",
+	"publish:development": "lerna version --no-private --git-remote isy-nodejs && npm publish -r --tag dev --no-git-checks "
   },
   "devDependencies": {
     "lerna": "^8.1.8",
