--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "mocha": "echo \"Error: no test specified\" && exit 1",
-	"publish:development": "lerna version --no-private --git-remote isy-nodejs && npm publish -r --tag dev --no-git-checks "
+	"publish:development": "lerna version --no-private --git-remote isy-nodejs && npm publish packages/isy-nodejs -r --tag dev --no-git-checks "
   },
   "devDependencies": {
     "lerna": "^8.1.8",
