--- a/packages/isy-matter-server/package.json
+++ b/packages/isy-matter-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "isy-matter-server",
+  "name": "@pradeepmouli/isy-matter-server",
   "version": "1.0.1-alpha.5",
   "description": "Service to expose an ISY device as a Matter Border router",
   "keywords": [
@@ -9,7 +9,7 @@
     "polisy",
     "CHIP"
   ],
-  "author": "Pradeep Mouli <pmouli@mac.com>",
+  "author": "Pradeep Mouli",
   "homepage": "",
   "license": "MIT",
   "main": "bin/server.js",
@@ -32,6 +32,9 @@
 	"@project-chip/matter.js": "^0.10.6",
 	"@project-chip/matter-node.js": "^0.10.6"
 
+  },
+  "publishConfig": {
+	"access": "restricted"
   }
 
 }
