--- a/lerna.json
+++ b/lerna.json
@@ -2,24 +2,22 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.0.1-alpha.5",
+  "version": "1.0.1-alpha.6",
   "npmClient": "npm",
-
   "command": {
     "publish": {
       "ignoreChanges": [
         "**/*.md",
         "node_modules"
       ],
-	 "message": "chore(release): publish %s",
-	  "registry": "https://registry.npmjs.org/",
-	  "npmClient": "npm",
-	  "distTag": "dev"
-
+      "message": "chore(release): publish %s",
+      "registry": "https://registry.npmjs.org/",
+      "npmClient": "npm",
+      "distTag": "dev"
     },
-	"version": {
-	  "gitRemote": "isy-nodejs"}
-
+    "version": {
+      "gitRemote": "isy-nodejs"
+    }
   },
   "$schema": "./node_modules/lerna/lib/config/schema.json"
 }
