--- a/packages/isy-matter-server/package.json
+++ b/packages/isy-matter-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pradeepmouli/isy-matter-server",
-  "version": "1.0.1-alpha.5",
+  "version": "1.0.1-alpha.6",
   "description": "Service to expose an ISY device as a Matter Border router",
   "keywords": [
     "matter",
@@ -23,18 +23,16 @@
   "scripts": {
     "codegen": "ts-node bin/server.ts",
     "build:watch": "tsc -p ./tsconfig.json --watch",
-	"test": "node ./__tests__/isy-matter-server.test.js"
+    "test": "node ./__tests__/isy-matter-server.test.js"
   },
   "type": "module",
   "dependencies": {
+    "@project-chip/matter-node.js": "^0.10.6",
+    "@project-chip/matter.js": "^0.10.6",
     "isy-nodejs": "../isy-nodejs",
-	"winston":"^3.15.0",
-	"@project-chip/matter.js": "^0.10.6",
-	"@project-chip/matter-node.js": "^0.10.6"
-
+    "winston": "^3.15.0"
   },
   "publishConfig": {
-	"access": "restricted"
+    "access": "restricted"
   }
-
 }
