--- a/apps/matter-server/.env.sample
+++ b/apps/matter-server/.env.sample
@@ -1,7 +1,7 @@
 ISY_HOST_URL=eisy.local
 ISY_HOST_PORT=8080
-ISY_USERNAME=admin
-ISY_PASSWORD=qazWSX12
+ISY_USERNAME=<--username-->
+ISY_PASSWORD=<--password-->
 ISY_HOST_PROTOCOL=http
 MATTER_PORT=5540
 MATTER_VENDORID=65521
@@ -10,4 +10,4 @@ MATTER_DISCRIMINATOR=3840
 MATTER_PASSCODE=20202021
 WORKING_DIR=
 LOG_LEVEL=debug
-LOG_FILE=${WORKING_DIR}log/matter_server.log
+LOG_FILE=${WORKING_DIR}matter_server.log
