--- a/apps/matter-server/package.json
+++ b/apps/matter-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pmouli/isy-matter-server",
-  "version": "1.0.1-alpha.9",
+  "version": "1.0.1-alpha.10",
   "description": "Service to expose an ISY device as a Matter Border router",
   "keywords": [
     "matter",
@@ -21,7 +21,7 @@
   },
   "files": [
     "bin",
-	"README.md"
+    "README.md"
   ],
   "scripts": {
     "run:dev": "tsx ./src/server.ts -a",
@@ -31,12 +31,12 @@
   },
   "type": "module",
   "dependencies": {
+    "@npmcli/package-json": "6.0.1",
     "commander": "12.1.0",
     "dotenv": "^16.4.5",
     "dotenv-expand": "11.0.6",
-    "isy-nodejs": "^1.0.1-alpha.9",
-    "winston": "^3.15.0",
-	"@npmcli/package-json": "6.0.1"
+    "isy-nodejs": "^1.0.1-alpha.10",
+    "winston": "^3.15.0"
   },
   "publishConfig": {
     "access": "public"
