--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ packages/isy-nodejs/dist/tsconfig.esm.tsbuildinfo
 packages/isy-nodejs/dist/tsconfig.cjs.tsbuildinfo
 apps/matter-server/bin/matter/
 apps/matter-server/bin/.env
+packages/isy-nodejs/dist/tsconfig.esm.tsbuildinfo
