--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,6 @@ packages/isy-nodejs/dist/tsconfig.esm.tsbuildinfo
 packages/isy-nodejs/dist/tsconfig.cjs.tsbuildinfo
 apps/matter-server/bin/matter/
 apps/matter-server/bin/.env
-packages/isy-nodejs/dist/tsconfig.esm.tsbuildinfo
 apps/matter-server/.env
 apps/matter-server/matter_server.log*
+apps/matter-server/matter_server*.log*
