chore(release): publish v1.0.1-alpha.28

--- a/packages/isy-matter/package.json
+++ b/packages/isy-matter/package.json
@@ -3,11 +3,11 @@
         "@matter/main": "0.11.4"
     },
     "devDependencies": {
-        "typescript": "~5.6.2",
-        "@types/node": "^22.8.7"
+        "@types/node": "^22.8.7",
+        "typescript": "~5.6.2"
     },
     "name": "matter-app",
-    "version": "0.1.0",
+    "version": "1.0.1-alpha.28",
     "type": "module",
     "scripts": {
         "prepare": "tsc",
@@ -16,7 +16,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "clean": "node -e 'fs.rmSync(\"dist\", { recursive: true, force: true })'"
     },
-	"private": true,
+    "private": true,
     "description": "Bridge for multiple OnOff light/sockets with a CLI command execution interface",
     "author": "user.name=Pradeep Mouli <user.email=pmouli@mac.com>"
 }
