--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "mocha": "echo \"Error: no test specified\" && exit 1",
     "version": "lerna version --git-remote isy-nodejs",
-    "publish:development": "lerna publish from-package --git-remote isy-nodejs --no-private --dist-tag dev"
+    "publish:development": "lerna publish from-package --git-remote isy-nodejs --no-private --dist-tag dev",
+	 "publish:v11": "lerna publish from-package --git-remote isy-nodejs --no-private --dist-tag v11"
   },
   "devDependencies": {
     "@types/npmcli__package-json": "4.0.4",
