--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,5 @@ packages/isy-nodejs/dist/tsconfig.cjs.tsbuildinfo
 apps/matter-server/bin/matter/
 apps/matter-server/bin/.env
 apps/matter-server/.env
-apps/matter-server/matter_server.log*
 apps/matter-server/matter_server*.log*
+apps/matter-server/.env
