--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   "dependencies": {
     "@matter/general": "^0.11.4",
     "@matter/main": "^0.11.4",
-    "@matter/node": "0.11.4",
-    "@matter/nodejs": "0.11.4",
+    "@matter/node": "^0.11.4",
+    "@matter/nodejs": "^0.11.4",
     "@matter/types": "^0.11.4",
     "@npmcli/package-json": "^6.0.1",
     "@project-chip/matter-node.js": "^0.11.4",
