--- a/packages/isy-nodejs/package.json
+++ b/packages/isy-nodejs/package.json
@@ -70,5 +70,6 @@
     },
     "publishConfig": {
         "access": "public"
-    }
+    },
+    "gitHead": "85ca897f2d6c192552e100e17a7bd11ea8bb04cf"
 }
