--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
     "packages/*",
     "apps/*"
   ],
-  "version": "1.0.5-alpha.1",
+  "version": "1.0.5-y.0",
   "npmClient": "npm",
   "command": {
     "publish": {
