--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ apps/matter-server/.env
 apps/matter-server/matter_server*.log*
 apps/matter-server/.env
 apps/matter-server/matter/**/*
+apps/matter-server/bin/*
