Fix .env logfile + clean comments

--- a/apps/matter-server/pkg/files/.env
+++ b/apps/matter-server/pkg/files/.env
@@ -1,7 +1,5 @@
-#ISY_HOST_URL=localhost
-#ISY_HOST_PORT=80
+# Use the unix socket to communicate with IoX
 LOGNAME=polyglot
-#ISY_HOST_PROTOCOL=http
 MATTER_PORT=5540
 MATTER_VENDORID=65521
 MATTER_PRODUCTID=32768
@@ -9,5 +7,5 @@ MATTER_DISCRIMINATOR=3840
 MATTER_PASSCODE=20202021
 WORKING_DIR=/var/matter
 LOG_LEVEL=debug
-LOG_FILE=${WORKING_DIR}matter_server.log
+LOG_FILE=${WORKING_DIR}/matter_server.log
 NODE_ENV=production
