--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,5 @@ apps/matter-server/bin/*
 apps/matter-server/pkg/build/*
 apps/matter-server/pkg/work/*
 apps/matter-server/pkg/distinfo
-matter-server.tar.gz
+matter.tar.gz
 .idea
