--- a/apps/matter-server/pkg/files/matter.in
+++ b/apps/matter-server/pkg/files/matter.in
@@ -1,19 +1,19 @@
 #!/bin/sh
 # $FreeBSD$
-# PROVIDE: matter-server
+# PROVIDE: matter
 # REQUIRE: NETWORK ldconfig mosquitto pg3x
 # BEFORE:
 # KEYWORD: shutdown
 #
 # Add the following lines to /etc/rc.conf.local or /etc/rc.conf
 # to enable this service:
-# matter-server_enable (bool):  Set to "YES" by default.
+# matter_enable (bool):  Set to "YES" by default.
 #                        Set it to "NO" to disable
 
 . /etc/rc.subr
 
-name=matter-server
-desc="matter-server service"
+name=matter
+desc="matter service"
 rcvar=matter_enable
 
 load_rc_config $name
@@ -28,7 +28,7 @@ load_rc_config $name
 matter_chdir=${matter_homedir}
 pidfile=${matter_homedir}/matter_svc.pid
 
-udx_command="/usr/local/bin/node dist/index.js"
+udx_command="/usr/local/bin/node bin/server.js -a"
 
 #MUST BE BEFORE udx.rc
 #start_precmd=matter_start_precmd
