Updated server to fix for client disconnect issue, and non auth

--- a/apps/matter-server/package.json
+++ b/apps/matter-server/package.json
@@ -24,7 +24,7 @@
     "README.md"
   ],
   "scripts": {
-    "run:dev": "tsx ./src/server.ts -a",
+    "run:dev": "tsx ./src/server.ts -a -s",
     "build:watch": "tsc -p ./tsconfig.json --watch",
     "build": "tsc -p ./tsconfig.json",
     "test": "node ./__tests__/isy-matter-server.test.js"
@@ -34,8 +34,7 @@
     "@npmcli/package-json": "6.1.0",
     "commander": "12.1.0",
     "dotenv": "^16.4.7",
-    "isy-nodejs": "^1.0.9-alpha.1",
-	"isy-matter": "^1.0.9-alpha.1",
+    "isy-matter": "^1.0.9-alpha.1",
     "winston": "^3.17.0"
   },
   "publishConfig": {
