--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.1"
   },
+  "engines": {
+    "node": ">=18.20"
+  },
   "keywords": [
     "ISY",
     "eISY",
